# dynamic-simulation-v2

./: .gitignore  README.md  TESTING.md  config.yaml  main.py  pyproject.toml
.claude/: settings.local.json
classes/: Cable.py  Drone.py  HighLevelController.py  Payload.py  __init__.py  drone_controller.py
docs/: TESTING.md
helpers/: __init__.py  default_params.py  initial_states.py  initialise_objects.py
src/: core.py
src/classes/: __init__.py  cable.py  drone.py  drone_controller.py  high_level_controller.py  mission_manager.py  path_planner.py  payload.py  trajectory_planner.py
src/helpers/: initial_states.py  initialise_objects.py
src/simulation/: physics.py
src/utils/: config.py  default_params.py  helpers.py  import_csv.py  initial_states.py  initialise_objects.py  trajectory_planning.py
src/visualizations/: plot.py
tests/: test_cable_tension.py  test_core.py  test_initial_states.py  trajectory_planning.py  uav_formation_clean.py  uav_formation_opt.py
