[project]
name = "dynamic-simulation"
version = "0.1.0"
description = "Particle-based dynamic simulation utilities"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scipy>=1.11",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
