[project]
name = "dynamic-simulation"
version = "0.1.0"
description = "Particle-based dynamic simulation utilities"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scipy>=1.11",
    "coverage>=7.14.0",
    "python-statemachine>=3.1.2",
    "casadi>=3.7.2",
    "pandas>=3.0.3",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
